// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-user-route should return 404 not found for non-existing user 1`] = `"User with id \\"666\\" could not be found"`;

exports[`get-user-route should return registered user info 1`] = `
Object {
  "email": "jack@daniels.com",
  "id": 1,
  "name": "Jack Daniels",
}
`;

exports[`get-user-route should return registered user info 2`] = `
Object {
  "email": "jack@daniels.com",
  "id": 1,
  "name": "Jack Daniels",
}
`;

exports[`get-user-route should return validation error for invalid user id 1`] = `
Array [
  Object {
    "code": "INVALID_TYPE",
    "description": "User id",
    "message": "Expected type number but found type string",
    "params": Array [
      "number",
      "string",
    ],
    "path": "#/id",
  },
]
`;

exports[`get-user-route transformUser removes excessive data 1`] = `
Object {
  "email": "jack@daniels.com",
  "id": 0,
  "name": "Jack Daniels",
}
`;
